# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-spatial-join-gpu"
version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[features]
gpu = ["sedona-libgpuspatial/gpu"]

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-physical-expr = { workspace = true }
geo-types = { workspace = true }
parking_lot = { workspace = true }
sedona-common = { workspace = true }
sedona-expr = { workspace = true }
geo-index = { workspace = true }
tokio = { workspace = true }
sedona-schema = { workspace = true }
sedona-functions = { workspace = true }
sedona-spatial-join = { workspace = true }
sedona-libgpuspatial = { workspace = true }
sedona-geo-generic-alg = { workspace = true }
sedona-query-planner = { workspace = true }
futures = { workspace = true }
wkb = { workspace = true }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
datafusion = { workspace = true, features = ["sql"] }
rstest = { workspace = true }
sedona-testing = { workspace = true }
wkt = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
rand = { workspace = true }
env_logger = { workspace = true }
