[package]
name = "sedona-spatial-join"
version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[features]
backtrace = ["datafusion-common/backtrace"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-common-runtime = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
geo-generic-alg = { workspace = true }
geo-traits = { workspace = true, features = ["geo-types"] }
geo-traits-ext = { workspace = true }
geo-types = { workspace = true }
sedona-common = { path = "../sedona-common" }
sedona-expr = { path = "../sedona-expr" }
sedona-functions = { path = "../sedona-functions" }
sedona-geometry = { path = "../sedona-geometry" }
sedona-schema = { path = "../sedona-schema" }
sedona-tg = { path = "../../c/sedona-tg"}
wkb = { workspace = true }
geo-index = { workspace = true }
geos = { workspace = true }
float_next_after = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
sedona-testing = { path = "../sedona-testing" }
wkt = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
sedona-geo = { path = "../sedona-geo" }
rand = { workspace = true }
