# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-spatial-join"
version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[features]
backtrace = ["datafusion-common/backtrace"]

[dependencies]
arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-common-runtime = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
geo = { workspace = true }
sedona-geo-generic-alg = { workspace = true }
geo-traits = { workspace = true, features = ["geo-types"] }
sedona-geo-traits-ext = { workspace = true }
geo-types = { workspace = true }
sedona-common = { workspace = true }
sedona-expr = { workspace = true }
sedona-functions = { workspace = true }
sedona-geo = { workspace = true }
sedona-geometry = { workspace = true }
sedona-schema = { workspace = true }
sedona-tg = { workspace = true }
sedona-geos = { workspace = true }
wkb = { workspace = true }
geo-index = { workspace = true }
geos = { workspace = true }
float_next_after = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }
sedona-testing = { path = "../sedona-testing" }
wkt = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
rand = { workspace = true }
